# sysinfo-gui

./: Cargo.toml  README.md  build.rs
.github/workflows/: appimage.yml  bundle.yml  release.yml  rust.yml
assets/: sysinfo-gui.desktop
src/: main.rs  utils.rs  view.rs
src/gui/: app.rs  colors.rs  message.rs  mod.rs  svgs.rs  view.rs
src/gui/styles/: colors.rs  mod.rs  svgs.rs
src/gui/widgets/: card.rs  dial.rs  mod.rs  sliders.rs  svg_button.rs  toggle.rs
src/logic/: message.rs  mod.rs
src/styles/: colors.rs  svgs.rs
src/view/: cpu.rs  disk.rs  general.rs  info.rs  mem.rs  mod.rs  net.rs  procs.rs  settings.rs
src/widgets/: card.rs  dial.rs  mod.rs  sliders.rs  svg_button.rs  toggle.rs
