[package]
name = "sysinfo-gui"
version = "0.1.15"
edition = "2021"
repository = "https://github.com/MoAlyousef/sysinfo-gui"
keywords = ["cross-platform", "monitoring", "gui"]
license = "MIT"
categories = ["visualization"]
description = "A cross-platform system-monitoring gui application based on sysinfo and fltk"
documentation = "https://docs.rs/sysinfo-gui"
readme = "README.md"
build = "build.rs"

[package.metadata.bundle]
identifier = "io.github.moalyousef"
icon = ["assets/icon.png"]

[dependencies]
sysinfo = { version = "0.26", default-features = false }
fltk = "1.3.16"
fltk-extras = "0.1"
parking_lot = "0.12"
dark-light = { version = "0.2.2", optional = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
strip = true
